[tool.poetry]
name = "slopes"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
geopandas = "^1.0.1"
rasterio = "^1.4.1"
rioxarray = "^0.17.0"
shapely = "^2.0.6"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
numpy = "^2.0.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
ipython = "^8.28.0"
valleyfloor = { git = 'ssh://git@github.com/avkoehl/valleyfloor.git', branch = 'main' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
