[tool.poetry]
name = "valleyx"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
geopandas = "^1.0.1"
rasterio = "^1.4.1"
rioxarray = "^0.17.0"
shapely = "^2.0.6"
numpy = "^2.0.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
shapelysmooth = "^0.2.1"
scikit-learn = "^1.5.2"
rdp = "^0.8"
pysheds = "^0.4"
tqdm = "^4.66.5"
numba = "^0.60.0"
loguru = "^0.7.2"
whitebox = "^2.3.5"
ruptures = "^1.1.9"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
xarray-spatial = "^0.4.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
